# adk-fluent

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .windsurfrules  AUDIT.md  AUDIT_CODE_QUALITY.md  AUDIT_DEVEX_PROPOSAL.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.template.md  SECURITY.md  SPEC_v2.md  a2ui_manifest.json  justfile  justfile.release  manifest.json  plan.md  pyproject.toml  pyrightconfig.json  scanner.py  sync-adk.yml  test.md
.clinerules/: adk-fluent.md
.cursor/rules/: adk-fluent.mdc
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  release_checklist.yml
.github/instructions/: adk-fluent.instructions.md
.github/workflows/: _publish-npm.yml  _publish-python.yml  autoformat.yml  ci-ts.yml  ci.yml  codeql.yml  docs.yml  release-drafter.yml  release.yml  sync-adk.yml
.jules/: bolt.md
catalog/flux/: ARCHITECTURE.md  INDEX.md  WORKSTREAMS.md  catalog.json
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
docs/: 404.md  changelog.md  conf.py  decision-guide.md  devex-tooling-manifesto.md  getting-started.md  index.md  llms-ts.txt  llms.txt  runnable-examples.md
docs/_static/: custom.css  custom.js  version-switcher.js
docs/architecture/: OBSERVABILITY_AND_NAMESPACE_AUDIT.md
docs/contributing/: adding-builders.md  codegen-pipeline.md  index.md  namespace-robustness.md  release-engineering.md  upstream-impact-analysis.md
docs/cookbook/: COOKBOOK_MASTER_PLAN.md  index.md
docs/editor-setup/: agent-skills.md  claude-code.md  cline.md  cursor.md  index.md  vscode.md  windsurf.md  zed.md
docs/flux/: index.md
docs/other_specs/: adk_fluent_v3_spec.docx  adk_fluent_v4_spec.md  adk_fluent_v4_suggestions.md  adk_fluent_v51_context.md  adk_fluent_v51_spec.md  adk_fluent_v51_state_thesis.md  adk_fluent_v5_event_visibility.md  adk_fluent_v5_spec.md  adk_fluent_v5_spec_appendix_f.md  adk_fluent_v5_spec_gap_analysis.md  adk_fluent_v5_spec_why.md
docs/plans/: 2026-02-17-100x-features-design.md  2026-02-17-100x-features-plan.md  2026-02-17-adk-samples-port-design.md  2026-02-17-adk-samples-port-plan.md  2026-02-17-documentation-publishing-design.md  2026-02-17-documentation-publishing-plan.md  2026-02-17-ergonomic-depth-and-autodocs-design.md  2026-02-17-ergonomic-depth-and-autodocs-plan.md  2026-02-17-full-auto-seed-generator-design.md  2026-02-17-full-auto-seed-generator-plan.md  2026-02-18-intelligent-codegen-plan.md  2026-02-18-v3-phase1-disfluencies.md  2026-02-18-v4-phase2-ir-backend.md  2026-02-18-v4-phase3-middleware.md  2026-02-18-v4-phase4-capabilities.md  2026-02-18-v51-context-engineering.md  2026-02-25-api-surface-v2-design.md  2026-02-25-api-surface-v2-plan.md  2026-02-28-middleware-schema-design.md  2026-02-28-middleware-schema-plan.md  2026-02-28-semantic-ir-design.md  2026-02-28-semantic-ir-plan.md  2026-02-28-uniform-schemas-design.md  2026-02-28-uniform-schemas-plan.md  2026-03-01-a-module-design.md  2026-03-01-a-module-phase2-plan.md  2026-03-01-a-module-plan.md  2026-03-01-devex-gaps-design.md  2026-03-01-devex-gaps-plan.md  2026-03-01-framework-comparison-design.md  2026-03-01-framework-comparison-plan.md  2026-03-01-t-module-design.md  2026-03-01-t-module-plan.md  2026-03-01-verb-harmonization-design.md  2026-03-01-verb-harmonization-plan.md  2026-03-10-namespace-expansion-design.md  2026-03-10-namespace-expansion-plan.md  2026-03-16-dynamic-topologies-design.md  2026-03-16-h-module-human-in-the-loop-design.md  2026-04-12-harness-foundations-master-plan.md  (+3 more)
docs/reports/: dependency-bloat-analysis.md
docs/research/: a2a-fluent-integration.md  a2a-spec-audit.md  durable-execution-five-layer-decoupling.md  dx-appendix-a-self-critique.md  tech-debt-audit.md  (+10 more)
examples/: .env.example  demo.py
gemini-live-rs/: Cargo.toml
python/: README.md  pyproject.toml  quickstart.py
scripts/: benchmark.py  code_ir.py  concepts_generator.py  cookbook_generator.py  cookbook_to_agents.py  doc_generator.py  export_a2ui_surfaces.py  generator.py  ir_generator.py  llms_generator.py  publish_wiki.sh  readme_generator.py  scanner.py  seed_generator.py  shared.py  skill_generator.py  update_html_refs.py
seeds/: a2ui_seed.toml  seed.manual.toml  seed.toml
shared/: manifest.json  parity.toml
shared/scripts/: add_cookbook.py  concepts_generator.py  cookbook_to_agents.py  doc_generator.py  doc_ir.py  docs_validator.py  ir_generator.py  llms_generator.py  pyproject.toml  readme_generator.py  scanner.py  seed_generator.py  skill_generator.py
shared/scripts/a2ui/: generator.py
shared/scripts/code_ir/: __init__.py  emitters.py  ts_emitter.py
shared/scripts/flux/: __init__.py  __main__.py  _loader.ts  build.py  checker.py  emit_catalog.py  emit_docs.py  emit_py.py  emit_react.py  emit_ts.py  loader.py
shared/scripts/generator/: __main__.py  ir_builders.py  orchestrator.py  spec.py  stubs.py  tests.py  type_normalization.py
shared/scripts/release/: __init__.py  __main__.py  changelog.py  preflight.py  version.py
shared/scripts/seed_generator/: aliases.py  classifier.py  emitter.py  extras.py  merger.py  orchestrator.py
shared/scripts/transpiler/: __init__.py  __main__.py  ast_walker.py  operator_map.py  python_to_ts.py  type_map.py
shared/scripts/transpiler/tests/: test_transpiler.py
shared/scripts/transpiler/tests/golden/: namespaces.py  pipeline_operators.py  simple_agent.py
skills/: README.md
tests/: test_a2a_builders.py  test_a2a_phase2.py  test_a2a_phase3.py  test_code_ir.py  test_doc_generator.py  test_import_budget.py  test_inference_coverage.py  test_inference_integration.py  test_property_based.py  test_scanner.py  test_seed_generator.py
ts/: .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
visual/: .env.example  README.md  index.html  server.py
(+1260 files in other folders)
