[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adk-fluent"
version = "0.3.1"
description = "Fluent builder API for Google's Agent Development Kit (ADK)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "adk-fluent contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Pydantic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
keywords = ["adk", "google", "agents", "fluent", "builder", "llm"]

dependencies = [
    "google-adk>=1.20.0",
]

[project.optional-dependencies]
yaml = [
    "pyyaml>=6.0",
]
examples = [
    "python-dotenv>=1.0",
]
dev = [
    "pytest>=7.0",
    "pyright>=1.1",
]
docs = [
    "sphinx>=7.0",
    "myst-parser>=3.0",
    "sphinx-design>=0.6",
    "furo>=2024.0",
    "sphinx-copybutton>=0.5",
]

[project.urls]
Homepage = "https://github.com/vamsiramakrishnan/adk-fluent"
Repository = "https://github.com/vamsiramakrishnan/adk-fluent"
Issues = "https://github.com/vamsiramakrishnan/adk-fluent/issues"
Documentation = "https://vamsiramakrishnan.github.io/adk-fluent/"
Changelog = "https://github.com/vamsiramakrishnan/adk-fluent/blob/master/CHANGELOG.md"

[project.entry-points."adk_extensions"]
fluent = "adk_fluent"

[tool.hatch.build.targets.wheel]
packages = ["src/adk_fluent"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".venv/",
    "dist/",
    ".git/",
    ".pip-cache/",
    ".pytest_cache/",
    "__pycache__/",
    "*.egg-info/",
    "manifest.json",
]

[tool.pyright]
include = ["src"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
